--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Get In Touch</h2>
         <h3>Develop what you want.</h3>
         <p class="contact-message">I'm a developer, so I know how to create your website to run across devices using the latest technologies available..</p>
-        <a class="btn" href="https://bidsrip.53@gmail.com">CONTACT ME</a>
+        <a class="btn" href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox?compose=GTvVlcRzCpZlWFxNcdBmRdNdDGPDKKHStWxrszlvqzVsJGltLNVbFlxBLKTkFtFvLBMDjstWlGDWV">CONTACT ME</a>
       </div>
     </div>
 
